Added connection string

--- a/Assignment2Part3/appsettings.json
+++ b/Assignment2Part3/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "data source=comp2084assignment1.database.windows.net;initial catalog=MVCMovieBook;persist security info=True;user id=markiemark20;password=Reesespeices24;"
+  }
 }
